"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-11-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-00:
	  Merged prsim-bd (bundled-data) branch after rebase.
	  Merged spice-verilog (spice parse front-end) branch after rebase.


2011-11-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-98-prsim-bd-09:
	  prsim/channel: support data-less handshakes for 2p and 4p
		bundled-data (pass :0 for data-rail argument).
		Internally, uses radix = 0 to mean data-less.
		Test cases added, documented.


2011-11-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-98-prsim-bd-08:
	  prsim: fix: make sure summarize_status always sets
		the full-empty handshake state regardless of data rails.


	* HACKT-00-01-04-main-00-84-98-prsim-bd-07:
	  prsim: fix bundled-data 2-phase sources and sinks for
		first basic test cases (added).


2011-11-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-98-prsim-bd-06:
	  prsim: channel watched-but-ignored values are printed, 
		but with extra "(ignored)" text for clarity.
		Updated test cases.


2011-11-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-98-prsim-bd-05:
	  prsim: drafted bundled-data 2-phase channel-environments, untested.


2011-11-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-99:
	  Object/expr/meta_call_traits.h: extended auto-wrap call to 
		support up to 10 arguments.  
		This needs to be variadic (c++11) or auto-generated.


2011-11-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-98-prsim-bd-04:
	  prsim: adjusted channel-fanin/fanout, added bd timing global warning,
		allow all bd channels to be signed.


2011-11-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-98-prsim-bd-03: