@@ -1,0 +1,11 @@
+globID	super		localID	canonical	footprint-frame
+[global process entries]
+1	(top)	-	1	i_foo	foo<>
+	channel: ;1
+	bool: 1,2
+[global channel entries]
+1	process	1	1	i_foo.in	chan()
+[global bool entries]
+1	(top)	-	1	!GND	 @[ supply_low ]
+2	(top)	-	2	!Vdd	 @[ supply_high ]
+
