@@ -1,0 +1,342 @@
+WARNING: channel foo<>::in lacks connection to a producer.
+Warnings found (1) while creating complete type foo<>.
+---- END CREATE WARNINGS ---
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	36
+	3	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	4	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	5	##ADDR##	procdefn	0	#HEAD#	#TAIL#	116
+	6	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	7	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	28
+	8	##ADDR##	chanplch	0	#HEAD#	#TAIL#	26
+	9	##ADDR##	portscop	0	#HEAD#	#TAIL#	20
+	10	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	11	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	12	##ADDR##	datadefn	0	#HEAD#	#TAIL#	69
+	13	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	14	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	15	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	16	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	17	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	18	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	19	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	20	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	21	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	22	##ADDR##	chaninst	0	#HEAD#	#TAIL#	20
+	23	##ADDR##	bchntprf	0	#HEAD#	#TAIL#	21
+	24	##ADDR##	CHPconcr	0	#HEAD#	#TAIL#	40
+	25	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	26	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	27	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	28	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	29	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	30	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	31	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	32	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	33	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	34	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	35	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	36	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	37	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	38	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	39	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	40	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	41	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	42	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	43	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	44	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	45	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	46	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	47	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	48	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	49	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	50	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	51	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	52	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	53	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	54	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	55	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	56	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	57	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	58	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	59	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	60	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	61	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	62	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	63	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	64	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	65	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	66	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	67	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	68	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	69	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	70	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	71	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	72	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	73	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	74	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	75	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	76	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	77	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	78	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	79	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	80	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	81	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	82	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	83	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	84	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	85	##ADDR##	footprnt	0	#HEAD#	#TAIL#	709
+	86	##ADDR##	fndchntp	0	#HEAD#	#TAIL#	12
+	87	##ADDR##	CHPconcr	0	#HEAD#	#TAIL#	20
+	88	##ADDR##	CHPconcr	0	#HEAD#	#TAIL#	40
+	89	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	90	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	91	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	92	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	93	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	94	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	95	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	96	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	97	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	98	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	99	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	100	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	101	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	102	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	103	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	104	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	105	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	106	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	107	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	108	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	109	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	110	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	111	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	112	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	113	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	114	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	115	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	116	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	117	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	118	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	119	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	120	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	121	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	122	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	123	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	124	##ADDR##	CHPdetsl	0	#HEAD#	#TAIL#	24
+	125	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	126	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	127	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	128	##ADDR##	CHPguard	0	#HEAD#	#TAIL#	16
+	129	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	130	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	21
+	131	##ADDR##	procplch	0	#HEAD#	#TAIL#	29
+	132	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	133	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	134	##ADDR##	datainst	0	#HEAD#	#TAIL#	20
+	135	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	136	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	137	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	138	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	139	##ADDR##	dboolatt	0	#HEAD#	#TAIL#	30
+	140	##ADDR##	sdbmiref	0	#HEAD#	#TAIL#	16
+	141	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	16
+	142	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	143	##ADDR##	procinst	0	#HEAD#	#TAIL#	20
+	144	##ADDR##	proctprf	0	#HEAD#	#TAIL#	21
+	145	##ADDR##	footprnt	0	#HEAD#	#TAIL#	419
+	146	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	12
+
+In module created from: ##FILE## (unrolled) (created)
+In namespace "", we have: {
+  0 parameter-collections
+  3 instantiation-collections
+  0 sub-namespaces
+  1 definitions
+  0 typedefs
+  Definitions:
+    foo = process-definition (defined) foo(
+        bool<> !GND
+        bool<> !Vdd
+      )
+      In definition "foo", we have: {
+      Instances:
+        !GND = bool<> foo::!GND
+        !Vdd = bool<> foo::!Vdd
+        in = chan() foo::in
+      unroll sequence: 
+        ports: (
+          bool<> !GND
+          bool<> !Vdd
+        )
+        !GND@[supply=0]
+        !Vdd@[supply=1]
+        chan() in
+      chp:
+        concurrent: {
+          concurrent: {
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              false -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+          }
+        }
+      footprint: {
+        !GND = bool^0 = foo<>::!GND (1) @[ supply_low port-alias ] 
+        !Vdd = bool^0 = foo<>::!Vdd (2) @[ supply_high port-alias ] 
+        in = channel chan()^0 = foo<>::in (1) @[ chp? meta? ] 
+        Created state:
+        channel instance pool: (0 ports, 1 local, 0 mapped)
+        1	foo<>::in @[ chp? meta? ]	
+        bool instance pool: (2 ports, 0 local, 0 mapped)
+        1	foo<>::!GND @[ supply_low port-alias ]	
+        2	foo<>::!Vdd @[ supply_high port-alias ]	
+        resolved concurrent actions:
+          concurrent: {
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              false -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+            deterministic: {
+              true -> *[
+                in?
+              ]
+              else -> *[
+                in?
+              ]
+            }
+          }
+        chp events: {
+          event[0]: fork: , #pred: 1, succ: 2 6 10 14 18 13 
+          event[1]: join: , #pred: 6, succ: 
+          event[2]: select: [ true -> ... [] else -> ... ], #pred: 1, succ: 3 4 
+          event[3]: receive: in?, #pred: 1, succ: 3 
+          event[4]: receive: in?, #pred: 1, succ: 4 
+          event[5]: receive: in?, #pred: 1, succ: 5 
+          event[6]: select: [ true -> ... [] else -> ... ], #pred: 1, succ: 7 8 
+          event[7]: receive: in?, #pred: 1, succ: 7 
+          event[8]: receive: in?, #pred: 1, succ: 8 
+          event[9]: receive: in?, #pred: 1, succ: 9 
+          event[10]: select: [ true -> ... [] else -> ... ], #pred: 1, succ: 11 12 
+          event[11]: receive: in?, #pred: 1, succ: 11 
+          event[12]: receive: in?, #pred: 1, succ: 12 
+          event[13]: select: [ true -> ... [] else -> ... ], #pred: 1, succ: 9 5 
+          event[14]: select: [ false -> ... [] else -> ... ], #pred: 1, succ: 15 16 
+          event[15]: receive: in?, #pred: 1, succ: 15 
+          event[16]: receive: in?, #pred: 1, succ: 16 
+          event[17]: receive: in?, #pred: 1, succ: 17 
+          event[18]: select: [ true -> ... [] else -> ... ], #pred: 1, succ: 19 17 
+          event[19]: receive: in?, #pred: 1, succ: 19 
+        }
+      }
+      }
+
+  Instances:
+    !GND = bool<> !GND
+    !Vdd = bool<> !Vdd
+    i_foo = foo<> i_foo
+}
+
+footprint: {
+  !GND = bool^0 = !GND (1) @[ supply_low ] 
+  !Vdd = bool^0 = !Vdd (2) @[ supply_high ] 
+  i_foo = process foo<>^0 = i_foo (1) (
+    !GND = bool^0 = !GND (1) @[ supply_low ] 
+    !Vdd = bool^0 = !Vdd (2) @[ supply_high ] 
+  )
+  Created state:
+  process instance pool: (0 ports, 1 local, 0 mapped)
+  1	i_foo	foo<>
+    bool: 1,2
+  private sub-channel index map:
+    (1 -> 0)
+    (2 -> 1)
+  bool instance pool: (0 ports, 2 local, 0 mapped)
+  1	!GND @[ supply_low ]	
+  2	!Vdd @[ supply_high ]	
+}
